error
In file included from test.cpp:3:
bigbed.hpp: In member function ‘void biovoltron::format::bigbed::Header::r_read_Rtree(std::istream&, const size_t&, biovoltron::format::bigbed::Chrom&)’:
bigbed.hpp:249:91: error: no matching function for call to ‘biovoltron::format::bigbed::Header::is_overlapped(const unsigned int&, int&, const unsigned int&, uint32_t&, uint32_t&, uint32_t&, uint32_t&)’
       if (is_overlapped(id, start, end, start_chrom_ix, start_base, end_chrom_ix, end_base))
                                                                                           ^
bigbed.hpp:215:13: note: candidate: ‘template<class T> const bool biovoltron::format::bigbed::Header::is_overlapped(T, T, T, T, T, T, T) const’
  const bool is_overlapped(T chrom, T start, T end, T start_chrom, T start_base, T end_chrom, T end_base) const
             ^~~~~~~~~~~~~
bigbed.hpp:215:13: note:   template argument deduction/substitution failed:
bigbed.hpp:249:91: note:   deduced conflicting types for parameter ‘T’ (‘unsigned int’ and ‘int’)
       if (is_overlapped(id, start, end, start_chrom_ix, start_base, end_chrom_ix, end_base))
                                                                                           ^
bigbed.hpp:283:107: error: no matching function for call to ‘biovoltron::format::bigbed::Header::is_overlapped(const unsigned int&, int&, const unsigned int&, __gnu_cxx::__alloc_traits<std::allocator<unsigned int>, unsigned int>::value_type&, __gnu_cxx::__alloc_traits<std::allocator<unsigned int>, unsigned int>::value_type&, __gnu_cxx::__alloc_traits<std::allocator<unsigned int>, unsigned int>::value_type&, __gnu_cxx::__alloc_traits<std::allocator<unsigned int>, unsigned int>::value_type&)’
       if (is_overlapped(id, start, end, start_chrom_ixs[i], start_bases[i], end_chrom_ixs[i], end_bases[i]))
                                                                                                           ^
bigbed.hpp:215:13: note: candidate: ‘template<class T> const bool biovoltron::format::bigbed::Header::is_overlapped(T, T, T, T, T, T, T) const’
  const bool is_overlapped(T chrom, T start, T end, T start_chrom, T start_base, T end_chrom, T end_base) const
             ^~~~~~~~~~~~~
bigbed.hpp:215:13: note:   template argument deduction/substitution failed:
bigbed.hpp:283:107: note:   deduced conflicting types for parameter ‘T’ (‘unsigned int’ and ‘int’)
       if (is_overlapped(id, start, end, start_chrom_ixs[i], start_bases[i], end_chrom_ixs[i], end_bases[i]))
                                                                                                           ^
make: *** [all] Error 1
